--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.9"
 # To build image and initialize container for subsequent tasks:
 #   docker-compose build
 #   docker-compose run --rm buildenv /bin/bash
+#   curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+#   export PATH="/root/.local/bin:$PATH"
 #   poetry install
 #   poetry run python manage.py migrate
 
