--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ version: "3.9"
 # To Publish (test pypi):
 #   docker-compose run --rm buildenv /bin/bash
 #   poetry config repositories.testpypi https://test.pypi.org/legacy/
+#   poetry config http-basic.testpypi vancly <password>
 #   poetry publish -r testpypi
 
 # To Publish:
