--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
 version: "3.9"
 
 # To build image and initialize container for subsequent tasks:
-#   docker-compose build
+#   docker-compose build --no-cache
 #   docker-compose run --rm buildenv /bin/bash
-#   curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
-#   export PATH="/root/.local/bin:$PATH"
 #   poetry install
 #   poetry run python manage.py migrate
 
@@ -19,10 +17,12 @@ version: "3.9"
 # To Publish (test pypi):
 #   docker-compose run --rm buildenv /bin/bash
 #   poetry config repositories.testpypi https://test.pypi.org/legacy/
+#   poetry config http-basic.testpypi vancly <password>
 #   poetry publish -r testpypi
 
 # To Publish:
 #   docker-compose run --rm buildenv /bin/bash
+#   poetry config http-basic.pypi vancly <password>
 #   poetry publish
 
 services:
