Support newer versions of Django up to 3.x.y

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,14 @@ version: "3.9"
 # To Publish (test pypi):
 #   docker-compose run --rm buildenv /bin/bash
 #   poetry config repositories.testpypi https://test.pypi.org/legacy/
-#   poetry config http-basic.testpypi vancly <password>
+#   poetry config http-basic.testpypi vancly
+#     enter password when prompted
 #   poetry publish -r testpypi
 
 # To Publish:
 #   docker-compose run --rm buildenv /bin/bash
-#   poetry config http-basic.pypi vancly <password>
+#   poetry config http-basic.pypi vancly
+#     enter password when prompted
 #   poetry publish
 
 services:
