--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vmigration-helper"
-version = "0.2.0"
+version = "0.2.1"
 homepage = "https://github.com/bluedenim/vmigration-helper"
 description = "Van's Django Migration Helper"
 authors = ["bluedenim <vancly@hotmail.com>"]
@@ -13,7 +13,7 @@ keywords = ["django","migration","rollback"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
-Django = "^1.11.17"
+Django = ">=1.11.17,<4"
 
 [tool.poetry.dev-dependencies]
 twine = "^3.4.1"
