--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@4.0.0
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Upgrade pip
