--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install poetry
         run: curl -sSL https://install.python-poetry.org | python3 -
       - name: Set path
-        run: export PATH=\$PATH:\$HOME/.local/bin >> /root/.bashrc
+        run: export PATH=\$PATH:\$HOME/.local/bin >> \$HOME/.bashrc
       - name: Install prereqs
         run: poetry install
       - name: Build
