Modify publish test to check for v*

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
   publish:
     name: Test publishing to test.pypi.org
     runs-on: ubuntu-latest
-    if: startsWith(github.event.ref, 'refs/tags/tv')
+    if: startsWith(github.event.ref, 'refs/tags/v')
     needs:
       - build
     steps:
