--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           name: artifact
           path: ./dist/
-      - uses: pypa/gh-action-pypi-publish@1.5.0
+      - uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          repository-url: https://test.pypi.org/legacy/
           user: __token__
           password: ${{ secrets.TESTPYPI_API_TOKEN }}
