--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,5 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.TESTPYPI_API_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
+          verbose: true
