--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vmigration-helper"
-version = "0.2.1"
+version = "0.2.2.dev0"
 homepage = "https://github.com/bluedenim/vmigration-helper"
 description = "Van's Django Migration Helper"
 authors = ["bluedenim <vancly@hotmail.com>"]
